experiement_output/error_log/nondex-RbkGh-Restful-BulkSMS.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:4: error: package com.smsgh does not exist
import com.smsgh.*;
^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:42: error: cannot find symbol
        BasicAuth auth = new BasicAuth(clientId, clientSecret);
        ^
  symbol:   class BasicAuth
  location: class SMSSenderSwiftAlertSMSGHImpl
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:42: error: cannot find symbol
        BasicAuth auth = new BasicAuth(clientId, clientSecret);
                             ^
  symbol:   class BasicAuth
  location: class SMSSenderSwiftAlertSMSGHImpl
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:43: error: cannot find symbol
        ApiHost host = new ApiHost(auth);
        ^
  symbol:   class ApiHost
  location: class SMSSenderSwiftAlertSMSGHImpl
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:43: error: cannot find symbol
        ApiHost host = new ApiHost(auth);
                           ^
  symbol:   class ApiHost
  location: class SMSSenderSwiftAlertSMSGHImpl
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:45: error: cannot find symbol
        MessagingApi messagingApi = new MessagingApi(host);
        ^
  symbol:   class MessagingApi
  location: class SMSSenderSwiftAlertSMSGHImpl
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:45: error: cannot find symbol
        MessagingApi messagingApi = new MessagingApi(host);
                                        ^
  symbol:   class MessagingApi
  location: class SMSSenderSwiftAlertSMSGHImpl
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:54: error: cannot find symbol
            MessageResponse response = messagingApi.sendQuickMessage(senderId,
            ^
  symbol:   class MessageResponse
  location: class SMSSenderSwiftAlertSMSGHImpl
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task682/wd/NonDex-plugin-test/github.com/RbkGh/Restful-BulkSMS/src/main/java/com/swiftpot/swiftalertmain/impl/SMSSenderSwiftAlertSMSGHImpl.java:63: error: cannot find symbol
        } catch (HttpRequestException ex) {
                 ^
  symbol:   class HttpRequestException
  location: class SMSSenderSwiftAlertSMSGHImpl
9 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 7s
